; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/mm/kmemcheck/extr_kmemcheck.c_kmemcheck_hide_addr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/mm/kmemcheck/extr_kmemcheck.c_kmemcheck_hide_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_PAGE_PRESENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kmemcheck_hide_addr(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i32* @kmemcheck_pte_lookup(i64 %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %22

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @pte_val(i32 %13)
  %15 = load i32, i32* @_PAGE_PRESENT, align 4
  %16 = xor i32 %15, -1
  %17 = and i32 %14, %16
  %18 = call i32 @__pte(i32 %17)
  %19 = call i32 @set_pte(i32* %11, i32 %18)
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @__flush_tlb_one(i64 %20)
  store i32 1, i32* %2, align 4
  br label %22

22:                                               ; preds = %10, %9
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32* @kmemcheck_pte_lookup(i64) #1

declare dso_local i32 @set_pte(i32*, i32) #1

declare dso_local i32 @__pte(i32) #1

declare dso_local i32 @pte_val(i32) #1

declare dso_local i32 @__flush_tlb_one(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
